--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
   		</div>
   	</div>
 
+<p id= "signup">Sign up for our monthly newsletter!</p> 
+<input type= "text" name= "textbox" size= "30"/ placeholder="Email Address"> <button type="button">Subscribe</button> 
+
     <div id='social-buttons'>
       <div class="media-buttons">
         <button class='btn-twitter'>Twitter</button>
