cssbackground pics to mental

--- a/mental health.html
+++ b/mental health.html
@@ -33,35 +33,41 @@
   <div class="container">
   	 <blockquote class="top"><h1>"Mens sana in corpore sano"</h1></blockquote>
  	 <div class="row">
-  	 <div class='col-sm-4'>
- 	 <div class="thumbnail text-center">
+  	<div class='col-sm-4'>
+ 	 	<div class="thumbnail text-center">
  	  	 	<img src="images/notebookPaper.png" class="img-responsive">
- 	  	 	<div class="caption">
- 	 		<h2 class="caption">Get informed</h2>
+ 	  	 	<div class="caption" id="par1-caption">
+ 	 			<h2>Get informed</h2>
  	 		
-			<p class="caption">
-				Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
-			</p>
-		</div>	
- 	 </div>
+				<p>
+					Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
+				</p>
+			</div>
+	  </div>
+ 	</div>
+ 	 <div class='col-sm-4'>
+ 	 	<div class="thumbnail text-center ">
+ 	 		<img src="images/piles.png" class="img-responsive">
+ 	 		<div class="caption" id="par2-caption">
+				<h2>Talk to someone</h2>
+  				<p class="de">
+  				Telling people about your issues is a big relief. But if you're afraid or embarrassed to speak to your friends, there are <mark class="second">confidential</mark> support services where student volunteers will listen to you. Call the <a target="_blank" href="https://www.sheffieldnightline.co.uk/"><b>Nightline</b></a> between 8pm-8am to find a friendly listener or reach the <a target="_blank" href="http://www.samaritans.org/"><b>Samaritans</b></a class="text-danger"> round the clock. Another place to look for help is the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/chaplaincy"><b>Multi-faith Chaplaincy</b></a>.
+  				</p>
+ 	 		</div>
+ 		 </div>
  	 </div>
  	 <div class='col-sm-4'>
- 	 <div>
-			<h2>Talk to someone</h2>
-  			<p class="text-justify">
-  				Telling people about your hardships is often a big relief. But if you're afraid or embarrassed to speak to your friends, there are <mark class="second">confidential</mark> support services where student volunteers will listen to you. Call the <a target="_blank" href="https://www.sheffieldnightline.co.uk/"><b>Nightline</b></a> between 8pm-8am to find a friendly listener or reach the <a target="_blank" href="http://www.samaritans.org/"><b>Samaritans</b></a class="text-danger"> round the clock at their free number. Another place to look for help, even if you're not a religious person, is the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/chaplaincy"><b>Multi-faith Chaplaincy</b></a>.
-  			</p>
- 	 </div>
- 	 </div>
- 	 <div class='col-sm-4'>
- 	 <div>
-  			<h1>Professional support</h1>
-  			<p class="text-justify">
-  				Sometimes, problems are harder to solve and require professional assistance. There is an unrightful stigma around mental health problems, so you shouldn't feel pressured to power through or wait to hit the bottleneck. There are <mark class="third">confidential</mark> services at Uni, such as the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/counselling"><b> Counselling Service</b></a> and the <a target="_blank" href-"http://www.sheffield.ac.uk/health"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <mark class="third">dyslexia</mark>, so the <a target="_blank" class="text-sucess" href="https://www.sheffield.ac.uk/ssid/disability"><b>Disability and Dyslexia Support Service</b></a> can help with diagnoses, adjustments and advice for different conditions that you may have.
-  			</p>
+ 	 	<div class="thumbnail text-center">
+ 	 		<img src="images/tape.png" class="img-responsive">
+ 	 		<div class="caption" id="par3-caption">
+  				<h1>Professional support</h1>
+  				<p class="text-justify">
+  				Sometimes, problems  require professional assistance. There are <mark class="third">confidential</mark> services at Uni, such as the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/counselling"><b> Counselling Service</b></a> and the <a target="_blank" href-"http://www.sheffield.ac.uk/health"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <mark class="third">dyslexia</mark>, so the <a target="_blank" class="text-sucess" href="https://www.sheffield.ac.uk/ssid/disability"><b>Disability and Dyslexia Support Service</b></a> can help with diagnoses, adjustments and advice for different conditions that you may have.
+  				</p>
+  			</div>
   		</div>
-  		</div>
-  		</div>
+  	</div>
+  	</div>
   	<div class="row">
   	 	<div class='col-sm-4'>
  	 		<div>
