--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -68,7 +68,7 @@
 
   <img src='https://media.apnarm.net.au/media/images/2013/07/24/25-1227975-gla300811sext2_fct664x404x17x355_t620.jpg' class= "img-responsive" id=img-border>
   <blockquote class= "top"> 
-    <p>Sending sexual messages of yourself to someone you know might seem harmless, but what happens if these are seen by other people? Find out the facts, the risks and how to protect yourself <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/sexting-images-risk-young-people.aspx" target="_blank" class= "link">here</b></a></p>
+    <p>Sending sexual messages of yourself to someone you know might seem harmless, but what happens if these are seen by other people? Find out the facts, the risks and how to protect yourself <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/sexting-images-risk-young-people.aspx" target="_blank" class= "link"><b>here</b></a></p>
   </blockquote>
 
   </div>
