--- a/mental health.html
+++ b/mental health.html
@@ -31,7 +31,7 @@
   </div>
 </nav>
   <div class="container">
-  	 <blockquote class="top"><h1>"Mens sana in corpore sano"</h1></blockquote>
+  	 <blockquote class="top"><h1 class="purplehead">"Mens sana in corpore sano"</h1></blockquote>
  	 <div class="row">
   	<div class='col-sm-4'>
  	 	<div class="thumbnail text-center">
