--- a/physical health.html
+++ b/physical health.html
@@ -35,7 +35,7 @@
   </div>
 </nav>
 
-    <h1>Looking After Your Body <i class="em em-muscle"></i></h1>
+    <h1 class= "purplehead">Looking After Your Body <i class="em em-muscle"></i></h1>
   
   <div class='row'>  
 
