--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -40,12 +40,12 @@
 
     <div class= 'col-sm-4'>
 
-      <h2>Alcohol <i class="em em-tropical_drink"></i></h2>
+      <h2 class= "purplehead">Alcohol <i class="em em-tropical_drink"></i></h2>
 
       <img src= 'images/alcohol.jpg' class= "img-responsive" id=img-border>
       <blockquote class= "top">
 
-       <p>Alcohol can make you do things you'll regret, including having unprotected or uncosenting sex. Find out the risks and how you can keep yourself safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/Sexandalcohol.aspx" target="_blank" class= "link"><b>here</b></a></p>
+       <p>Alcohol can make you do things you'll regret, including having unprotected or uncosenting sex. Find out the risks and how you can keep yourself safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/Sexandalcohol.aspx" target="_blank" class= "link2"><b>here</b></a></p>
      </blockquote>
 
    </div>
@@ -53,10 +53,10 @@
 
    <div class='col-sm-4'>
 
-    <h2>STIs <i <i class="em em-couplekiss"></i></h2>
+    <h2 class= "purplehead">STIs <i <i class="em em-couplekiss"></i></h2>
 
     <blockquote class= "top">
-     <p>Cases of sexually transmitted infections (STIs), including HIV, are increasing. If you have unprotected sex, your health is at risk. Find out what symptoms to look out for and how to stay safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/STIs.aspx" target="_blank" class= "link"><b>here</b></a></p>
+     <p>Cases of sexually transmitted infections (STIs), including HIV, are increasing. If you have unprotected sex, your health is at risk. Find out what symptoms to look out for and how to stay safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/STIs.aspx" target="_blank" class= "link2"><b>here</b></a></p>
    </blockquote>
    <img src='images/condoms.jpeg' class= "img-responsive" id=img-border>
 
@@ -64,11 +64,11 @@
  
  <div class='col-sm-4'>
 
-   <h2> Sexting <i class="em em-email"></i></h2>
+   <h2 class="purplehead"> Sexting <i class="em em-email"></i></h2>
 
   <img src='https://media.apnarm.net.au/media/images/2013/07/24/25-1227975-gla300811sext2_fct664x404x17x355_t620.jpg' class= "img-responsive" id=img-border>
   <blockquote class= "top"> 
-    <p>Sending sexual messages of yourself to someone you know might seem harmless, but what happens if these are seen by other people? Find out the facts, the risks and how to protect yourself <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/sexting-images-risk-young-people.aspx" target="_blank" class= "link"><b>here</b></a></p>
+    <p>Sending sexual messages of yourself to someone you know might seem harmless, but what happens if these are seen by other people? Find out the facts, the risks and how to protect yourself <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/sexting-images-risk-young-people.aspx" target="_blank" class= "link2"><b>here</b></a></p>
   </blockquote>
 
   </div>
