--- a/physical health.html
+++ b/physical health.html
@@ -14,26 +14,30 @@
 
   <body>
 
-<nav class="navbar navbar-inverse navbar-static-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="#">ABC Health</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
-        <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
-        <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
-        <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+ <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span> 
+          </button>
+          <div class="media-buttons">
+            <button class='btn-twitter' id='social-buttons'>Twitter</button>
+            <button class='btn-facebook' id='social-buttons'>Facebook</button>
+            <button class='btn-pinterest' id='social-buttons'>Pinterest</button>
+          </div>
+          </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
+            <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
+            <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
+            <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>  
 
     <h1>Looking After Your Body <i class="em em-muscle"></i></h1>
   
@@ -67,14 +71,6 @@
 
   <p id= "signup">Sign up for our monthly newsletter!</p> 
 <input type= "text" name= "textbox" size= "30"/ placeholder="Email Address"> <button type="button">Subscribe</button> 
-
-<div id='social-buttons'>
-  <div class= "media-buttons">
-      <button class='btn-twitter'>Twitter</button>
-      <button class='btn-facebook'>Facebook</button>
-      <button class='btn-pinterest'>Pinterest</button>
-  </div>
-</div>
 
       <script src='boot-dist/js/bootstrap.js'></script>
   </body>
