--- a/mental health.html
+++ b/mental health.html
@@ -10,25 +10,31 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   </head>
   <body>
-  <nav class="navbar navbar-inverse navbar-static-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="#">ABC Health</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
-        <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
-        <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
-        <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
-      </ul>
-    </div>
-  </div>
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span> 
+          </button>
+          <div class="media-buttons">
+            <button class='btn-twitter' id='social-buttons'>Twitter</button>
+            <button class='btn-facebook' id='social-buttons'>Facebook</button>
+            <button class='btn-pinterest' id='social-buttons'>Pinterest</button>
+          </div>
+          </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
+            <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
+            <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
+            <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
 </nav>
   <div class="container">
   	 <blockquote class="top"><h1>"Mens sana in corpore sano"</h1></blockquote>
