--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -34,46 +34,65 @@
   </div>
 </nav>
 
-  <img src= "images/sexualhealthlogo.png" id= imgborder>
+<img src= "images/sexualhealthlogo.png" id= imgborder>
 
-  <div class= 'row'>
+<div class= 'row'>
 
-    <div class= 'col-sm-4'>
-
-      <h2>Alcohol <i class="em em-tropical_drink"></i></h2>
-
+  <div class= 'col-sm-4'>
+    <div>
       <img src= 'images/alcohol.jpg' class= "img-responsive" id=img-border>
-      <blockquote class= "top">
+    </div>
+  </div>
 
-       <p>Alcohol can make you do things you'll regret, including having unprotected or uncosenting sex. Find out the risks and how you can keep yourself safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/Sexandalcohol.aspx" target="_blank" class= "link"> here </a> </p>
-     </blockquote>
+ <div class='col-sm-4'>
+  <div class="thumbnail text-center">
+    <img src="images/greenpost.png" class="img-responsive sexpic">
+      <div class="caption" id="sex2-caption">
 
-   </div>
-
-
-   <div class='col-sm-4'>
-
-    <h2>STIs <i <i class="em em-couplekiss"></i></h2>
-
-    <blockquote class= "top">
-     <p>Cases of sexually transmitted infections (STIs), including HIV, are increasing. If you have unprotected sex, your health is at risk. Find out what symptoms to look out for and how to stay safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/STIs.aspx" target="_blank" class= "link"> here </a> </p>
-   </blockquote>
-   <img src='images/condoms.jpeg' class= "img-responsive" id=img-border>
-
- </div>
+       <h2>STIs <i <i class="em em-couplekiss"></i></h2>
+       <p>Cases of sexually transmitted infections (STIs), including HIV, are increasing. If you have unprotected sex, your health is at risk. Find out what symptoms to look out for and how to stay safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/STIs.aspx" target="_blank" class= "link"> here </a></p>
+      </div>
+    </div>
+  </div>
  
  <div class='col-sm-4'>
-
-   <h2> Sexting <i class="em em-email"></i></h2>
-
-  <img src='https://media.apnarm.net.au/media/images/2013/07/24/25-1227975-gla300811sext2_fct664x404x17x355_t620.jpg' class= "img-responsive" id=img-border>
-  <blockquote class= "top"> 
-    <p>Sending sexual messages of yourself to someone you know might seem harmless, but what happens if these are seen by other people? Find out the facts, the risks and how to protect yourself <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/sexting-images-risk-young-people.aspx" target="_blank" class= "link"> here </a> </p>
-  </blockquote>
-
+    <div>
+     <img src='https://media.apnarm.net.au/media/images/2013/07/24/25-1227975-gla300811sext2_fct664x404x17x355_t620.jpg' class= "img-responsive" id=img-border>
+    </div>
   </div>
 
 </div>
+
+<div class= 'row'>
+
+  <div class= 'col-sm-4'>
+   <div class="thumbnail text-center">
+     <img src="images/tapeyel.png" class="img-responsive">
+      <div class="caption" id="sex1-caption">
+        <h2>Alcohol <i class="em em-tropical_drink"></i></h2>
+        <p class="lead">Alcohol can make you do things you'll regret, including having unprotected or uncosenting sex. Find out the risks and how you can keep yourself safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/Sexandalcohol.aspx" target="_blank" class= "link"> here </a> </p>
+      </div>
+    </div>
+  </div>
+
+  <div class='col-sm-4'>
+    <div>
+      <img src='images/condoms.jpeg' class= "img-responsive" id=img-border>
+    </div>
+  </div>
+
+  <div class="col-sm-4">
+    <div class="thumbnail text-center">
+      <img src="images/pinyellow.png" class="img-responsive">
+      <div class="caption" id="sexcol3">
+
+       <h2> Sexting <i class="em em-email"></i></h2>
+       <p class="lead">Sending sexual messages of yourself to someone you know might seem harmless, but what happens if these are seen by other people? Find out the facts, the risks and how to protect yourself <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/sexting-images-risk-young-people.aspx" target="_blank" class= "link"> here </a> </p>
+      </div>
+    </div>  
+  </div>
+</div>
+
 
 <p id= "signup">Sign up for our monthly newsletter!</p> 
 <input type= "text" name= "textbox" size= "30"/ placeholder="Email Address"> <button type="button">Subscribe</button> 
