--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="row">
   	 		<div class='col-sm-4'>
  	 			<div class="col1">
-    			<div class="thumbnail text-center">
+    			<div class="thumbnail text-center" id="postit">
           <img src="images/yellow.png" class="img-responsive">
           <div class="caption" id="index-caption">
         <p> <a href= "physical health.html" class="postit">Physical</a></p>
@@ -53,7 +53,7 @@
     		</div>
     		<div class='col-sm-4'>
     			<div class="col2">
-  					 <div class="thumbnail text-center">
+  					 <div class="thumbnail text-center" id="postit">
           <img src="images/green.png" class="img-responsive">
           <div class="caption" id="index-caption">
         <p> <a href= "mental health.html" class="postit">Mental</a></p>
@@ -63,7 +63,7 @@
   			</div>
   			<div class='col-sm-4'>
   				<div class="col3">
-  					 <div class="thumbnail text-center">
+  					 <div class="thumbnail text-center" id="postit">
           <img src="images/pink-postit.png" class="img-responsive">
           <div class="caption" id="index-caption">
         <p> <a href= "sexualhealth.html" class="postit">Sexual</a></p>
