--- a/index.html
+++ b/index.html
@@ -76,28 +76,49 @@
 
   <div class="about navbar-fixed-bottom">
     <h1>About us!</h1>
-  <div class="hidden show-description">  
-    <p class="large">Who are we?</p>
-    <p class="large"> We are 3 Sheffield University students who believe that health at University is important and wanted to create a website for students to use to gain advice and tips on how to stay healthy whilst at Uni!</p>
-
-<div class= "container">
-  <div class= "row">
-    <div class= 'col-sm-4'>
-      <h2 id="label">Alice</h2>
-      <img src="images/alice.jpg" class="center-block img-responsive" id="photo">
-    </div>
-    <div class='col-sm-4'>
-      <h2 id="label">Beth</h2>
-      <img src="images/beth.jpg" class="center-block img-responsive" id="photo">
-    </div>
-    <div class= 'col-sm-4'>
-      <h2 id="label">Carmen</h2>
-      <img src="images/carmen.jpg" class="center-block img-responsive" id="photo">
-    </div>
-  </div>
-</div>
-</div>
-</div>
+      <div class="hidden show-description">     
+        <div class= "container">
+          <div class= "row">
+              <div class='col-sm-7'>
+                <p class="large">Who are we?</p>
+                <p class="large"> We are 3 Sheffield University students who believe that health at University is important and wanted to create a website for students to use to gain advice and tips on how to stay healthy whilst at Uni!</p>
+              </div>
+              <div class= 'col-sm-5'>              
+                <div id="carousel" class="carousel slide" data-ride="carousel">
+                   <div class="carousel-inner" role="listbox">
+                     <div class="item active">
+                       <img src="images/alice.jpg" alt="Alice">
+                         <div class="carousel-caption">
+                          <p>Alice</p>
+                          </div>
+                      </div>
+                      <div class="item">
+                       <img src="images/beth.jpg" alt="Beth">
+                        <div class="carousel-caption">
+                         <p>Beth</p>
+                        </div>
+                       </div>
+                      <div class="item">
+                       <img src="images/carmen.jpg" alt="Carmen">
+                        <div class="carousel-caption">
+                         <h2>Carmen<p>
+                        </div>
+                      </div>
+                       <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+                       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                       <span class="sr-only">Previous</span>
+                       </a>
+                       <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+                       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                       <span class="sr-only">Next</span>
+                       </a>
+                   </div>
+                </div>
+            </div>
+          </div>
+         </div>
+        </div>
+      </div>
 
 <script>
   $('.about').on('click', function () {
