--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -57,7 +57,7 @@
    <div class='col-sm-4'>
     <div class="thumbnail text-center">
       <img src="images/greenpost.png" class="img-responsive">
-        <div class="caption">
+        <div class="caption" id="sex2-caption">
           <h2>STIs <i <i class="em em-couplekiss"></i></h2>
           <p>Cases of sexually transmitted infections (STIs), including HIV, are increasing. If you have unprotected sex, your health is at risk. Find out what symptoms to look out for and how to stay safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/STIs.aspx" target="_blank" class= "link"> here </a> </p>
         </div>
@@ -76,7 +76,7 @@
   <div class="col-sm-4">
     <div class="thumbnail text-center">
       <img src="images/tapeyel.png" class="img-responsive">
-      <div class="caption">
+      <div class="caption" id="sex1-caption">
         <h2>Alcohol <i class="em em-tropical_drink"></i></h2>
         <p>Alcohol can make you do things you'll regret, including having unprotected or uncosenting sex. Find out the risks and how you can keep yourself safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/Sexandalcohol.aspx" target="_blank" class= "link"> here </a> </p>
       </div>
@@ -92,7 +92,7 @@
   <div class="col-sm-4">
     <div class="thumbnail text-center">
       <img src="images/pinyellow.png">
-        <div class="caption">
+        <div class="caption" id="sexcol3">
           <h2> Sexting <i class="em em-email"></i></h2>
           <p>Sending sexual messages of yourself to someone you know might seem harmless, but what happens if these are seen by other people? Find out the facts, the risks and how to protect yourself <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/sexting-images-risk-young-people.aspx" target="_blank" class= "link"> here </a> </p>
         </div>
