deleted unwanted docs, added new pics

--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
   <div class= "row">
     <div class= 'col-sm-4'>
       <h2 id="label">Alice</h2>
-      <img src="images/alice.jpg" class="center-block img-responsive" id="photo">
+      <img src="images/alice.png" class="center-block img-responsive" id="photo">
     </div>
     <div class='col-sm-4'>
       <h2 id="label">Beth</h2>
-      <img src="images/beth.jpg" class="center-block img-responsive" id="photo">
+      <img src="images/beth.png" class="center-block img-responsive" id="photo">
     </div>
     <div class= 'col-sm-4'>
       <h2 id="label">Carmen</h2>
-      <img src="images/carmen.jpg" class="center-block img-responsive" id="photo">
+      <img src="images/carmen.png" class="center-block img-responsive" id="photo">
     </div>
   </div>
 </div>
