--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   	</div>
 
   <div class="about navbar-fixed-bottom">
-    <h1>About us!</h1>
+    <h1 class="about-title">About us!</h1>
   <div class="hidden show-description">  
 
 <div class= "container">
@@ -126,7 +126,7 @@
 </div>
 
 <script>
-  $('.about').on('click', function () {
+  $('.about-title').on('click', function () {
    $('.show-description').toggleClass('hidden'); 
    });
 </script>
