--- a/mental health.html
+++ b/mental health.html
@@ -37,14 +37,14 @@
     </nav>  
 
   	<blockquote class="top"><h1>"Mens sana in corpore sano"</h1></blockquote>
-<div class="row" id="container-row1">
+<div class="row">
 
-	<div id="container1">
+	<div id="container-fluid">
 	<div class='col-sm-4'>
 		<div class="thumbnail text-center">
  	  	 	<img src="images/notebookPaper.png" class="img-responsive">
 			<div class="caption" id="par1-caption">
- 	 			<h2>Get informed</h2>
+ 	 			<h2>Get informed</h2><br>
  	 			<p class="lead">
 					Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
 				</p>
@@ -60,11 +60,11 @@
  	</div>
  	<div >
 	<div class='col-sm-4'>
- 	 	<div class="thumbnail text-center" id="container3">	
+ 	 	<div class="thumbnail text-center" id="container-fluid">	
  	 		<img src="images/tape.png" class="img-responsive">
  	 			<div class="caption" id="par3-caption">
   					<h1>Professional support</h1>
-  					<p class="text-justify lead">
+  					<p class="lead">
   						Sometimes, problems  require professional assistance. There are <mark class="third">confidential</mark> services at Uni, such as the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/counselling class= "link"" class= "link"><b> Counselling Service</b></a> and the <a target="_blank" href-"http://www.sheffield.ac.uk/health" class= "link"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <mark class="third">dyslexia</mark>, so the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/disability" class= "link"><b>Disability and Dyslexia Support Service</b></a> can help.
   					</p>
   				</div>
@@ -72,16 +72,16 @@
   </div>
   </div>
 </div>
-<div class="row" id="container-row2">
+<div class="row">
   	<div class='col-sm-4'>
  	 	<div>
  	 		<img src="images/information.jpg" class="img-responsive" id="img-border">
  	 	</div>
  	</div>
  	
- 	<div id="container2">
+ 	
  	<div class='col-sm-4'>
- 	 	<div class="thumbnail text-center ">
+ 	 	<div class="thumbnail text-center " id="container-fluid">
  	 		<img src="images/piles.png" class="img-responsive">
  	 		<div class="caption" id="par2-caption">
 				<h2>Talk to someone</h2>
@@ -91,7 +91,7 @@
  	 		</div>
  		</div>
 	</div>
- 	</div>
+ 
 
  	<div class='col-sm-4'>
  	 	<div>
@@ -101,7 +101,7 @@
 </div>
 
 
-<p id= "signup">Sign up for our monthly newsletter!</p> 
+<p id= "signup"><b>Sign up for our monthly newsletter!</b></p> 
 <input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button> 
 
 
