added another div row

--- a/physical health.html
+++ b/physical health.html
@@ -37,42 +37,72 @@
         </div>
       </div>
     </nav>  
-    </nav>
 
-    <h1>Looking After Your Body <i class="em em-muscle"></i></h1>
+  <h1>Looking After Your Body <i class="em em-muscle"></i></h1>
   
   <div class='row'>  
 
     <div class='col-sm-4'>
-      <h2>Feeling Poorly? <i class="em em-mask"></i></h2>
-     <p>Get registered with your local health service <a target="_blank" href="https://www.sheffield.ac.uk/health/newregistrations" class= "link"><b>here!</b></a> Download the Health Service app to book appointments or get advise.</p> 
-      <p>Fresher's flu doesn't need to get you down! Save the hassle of getting a doctor's appointment and check out your local pharmacy <i class="em em-pill"></i> they often have <a target="_blank" href="http://www.nhs.uk/Conditions/Flu/Pages/Treatment.aspx" class= "link"><b>everything you need</b></a> for common illnesses.</p> 
-      <p>If you're unsure of your symptoms and think it may be more serious then call <strong>NHS 111</strong> for free medical advise.</p>
+      <div class="thumbnail text-center">
+        <img src="images/hanging-note.png" class="img-responsive">
+          <div class="caption">
+            <h2>Feeling Poorly? <i class="em em-mask"></i></h2>
+            <p>Get registered with your local health service <a target="_blank" href="https://www.sheffield.ac.uk/health/newregistrations" class= "link"><b>here!</b></a> Download the Health Service app to book appointments or get advise.</p> 
+            <p>Fresher's flu doesn't need to get you down! Save the hassle of getting a doctor's appointment and check out your local pharmacy <i class="em em-pill"></i> they often have <a target="_blank" href="http://www.nhs.uk/Conditions/Flu/Pages/Treatment.aspx" class= "link"><b>everything you need</b></a> for common illnesses.</p> 
+            <p>If you're unsure of your symptoms and think it may be more serious then call <strong>NHS 111</strong> for free medical advise.</p>
+          </div>
+      </div>
       <img src="images/sick.jpg" class="img-responsive" id="img-border">
     </div>
 
     <div class='col-sm-4'>
-      <h2>Eat Your Greens! <i class="em em-green_apple"></i></h2>
-      <img src="images/brocolli.jpg" class="img-responsive" id="img-border">
-  		<p>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy to help you cope with assignment stress or pesky bugs that go round Uni</p>
-      <p>Check out these <a target="_blank" href="https://studentrecipes.com/" class= "link"><b>cheap and easy recipes</b></a> that can be cooked for a whole flat or just you! Fancy a challenge? Try Veganuary- good for you and the environment!</p>
-      <p>We all love a good party, but make sure you're not drinking too much as this can be damaging your body. Check out this <a target=_blank href="http://www.nhs.uk/Livewell/alcohol/Pages/alcohol-units.aspx" class= "link"><b>guide</b></a> to help you know your limits. <i class="em em-beers"></i></p>
+      <div>
+        <img src="images/brocolli.jpg" class="img-responsive" id="img-border">
+      </div>
     </div>
 
     <div class='col-sm-4'>
-      <h2>Get Moving! <i class="em em-running"></i></h2>
-  		<p>Can't afford a gym membership? There's plenty of cheaper options</p> 
-      <p><a target="-blank" href="https://www.bigfunrun.com/sheffield/" class= "link"><b>Fun runs</b></a> inspire you to get training or how about getting together with your mates for a <a target="_blank" href="https://www.sport-sheffield.com/fitness-and-wellbeing/s10health/fitness-classes/fitness-class-timetable" class= "link"><b>workout session</b></a>. <i class="em em-dancers"></i></p> 
-      <p>Staying fit keeps your mind and body happy!</p>
-    <img src="images/running.jpg" class="img-responsive" id="img-border">
+      <div class="thumbnail text-center">
+        <img src="images/paperfile.png" class="img-responsive">
+          <div class="caption">
+            <h2>Get Moving! <i class="em em-running"></i></h2>
+  		      <p>Can't afford a gym membership? There's plenty of cheaper options</p> 
+            <p><a target="-blank" href="https://www.bigfunrun.com/sheffield/" class= "link"><b>Fun runs</b></a> inspire you to get training or how about getting together with your mates for a <a target="_blank" href="https://www.sport-sheffield.com/fitness-and-wellbeing/s10health/fitness-classes/fitness-class-timetable" class= "link"><b>workout session</b></a>. <i class="em em-dancers"></i></p> 
+            <p>Staying fit keeps your mind and body happy!</p>
+          </div>
+      </div>
     </div>
+ </div>
 
+ <div class="row">
+  <div class="col-sm-4">
+    <div>
+      <img src="images/sick.jpg" class="img-responsive" id="img-border">
+    </div>
   </div>
 
+  <div class="col-sm-4">
+    <div class="thumbnail text-center">
+      <img src="images/paper-note.png" class="img-responsive">
+        <div class="caption">
+          <h2>Eat Your Greens! <i class="em em-green_apple"></i></h2>
+          <p>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy to help you cope with assignment stress or pesky bugs that go round Uni</p>
+          <p>Check out these <a target="_blank" href="https://studentrecipes.com/" class= "link"><b>cheap and easy recipes</b></a> that can be cooked for a whole flat or just you! Fancy a challenge? Try Veganuary- good for you and the environment!</p>
+         <p>We all love a good party, but make sure you're not drinking too much as this can be damaging your body. Check out this <a target=_blank href="http://www.nhs.uk/Livewell/alcohol/Pages/alcohol-units.aspx" class= "link"><b>guide</b></a> to help you know your limits. <i class="em em-beers"></i></p>
+        </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4">
+    <div>
+      <img src="images/running.jpg" class="img-responsive" id="img-border">
+    </div>
+  </div>
+ </div>
+
   <p id= "signup">Sign up for our monthly newsletter!</p> 
-<input type= "text" name= "textbox" size= "30"/ placeholder="Email Address"> <button type="button">Subscribe</button> 
+  <input type= "text" name= "textbox" size= "30"/ placeholder="Email Address"> <button type="button">Subscribe</button> 
 
       <script src='boot-dist/js/bootstrap.js'></script>
   </body>
-
 </html>
