--- a/physical health.html
+++ b/physical health.html
@@ -45,14 +45,13 @@
     <div class='col-sm-4'>
       <div class="thumbnail text-center">
         <img src="images/hanging-note.png" class="img-responsive">
-          <div class="caption">
+          <div class="caption" id="physical1-caption">
             <h2>Feeling Poorly? <i class="em em-mask"></i></h2>
             <p>Get registered with your local health service <a target="_blank" href="https://www.sheffield.ac.uk/health/newregistrations" class= "link"><b>here!</b></a> Download the Health Service app to book appointments or get advise.</p> 
             <p>Fresher's flu doesn't need to get you down! Save the hassle of getting a doctor's appointment and check out your local pharmacy <i class="em em-pill"></i> they often have <a target="_blank" href="http://www.nhs.uk/Conditions/Flu/Pages/Treatment.aspx" class= "link"><b>everything you need</b></a> for common illnesses.</p> 
             <p>If you're unsure of your symptoms and think it may be more serious then call <strong>NHS 111</strong> for free medical advise.</p>
           </div>
       </div>
-      <img src="images/sick.jpg" class="img-responsive" id="img-border">
     </div>
 
     <div class='col-sm-4'>
@@ -64,7 +63,7 @@
     <div class='col-sm-4'>
       <div class="thumbnail text-center">
         <img src="images/paperfile.png" class="img-responsive">
-          <div class="caption">
+          <div class="caption" id="physical3-caption">
             <h2>Get Moving! <i class="em em-running"></i></h2>
   		      <p>Can't afford a gym membership? There's plenty of cheaper options</p> 
             <p><a target="-blank" href="https://www.bigfunrun.com/sheffield/" class= "link"><b>Fun runs</b></a> inspire you to get training or how about getting together with your mates for a <a target="_blank" href="https://www.sport-sheffield.com/fitness-and-wellbeing/s10health/fitness-classes/fitness-class-timetable" class= "link"><b>workout session</b></a>. <i class="em em-dancers"></i></p> 
@@ -84,7 +83,7 @@
   <div class="col-sm-4">
     <div class="thumbnail text-center">
       <img src="images/paper-note.png" class="img-responsive">
-        <div class="caption">
+        <div class="caption" id="physical2-caption">
           <h2>Eat Your Greens! <i class="em em-green_apple"></i></h2>
           <p>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy to help you cope with assignment stress or pesky bugs that go round Uni</p>
           <p>Check out these <a target="_blank" href="https://studentrecipes.com/" class= "link"><b>cheap and easy recipes</b></a> that can be cooked for a whole flat or just you! Fancy a challenge? Try Veganuary- good for you and the environment!</p>
