fiddled with layout

--- a/mental health.html
+++ b/mental health.html
@@ -44,7 +44,7 @@
 		<div class="thumbnail text-center">
  	  	 	<img src="images/notebookPaper.png" class="img-responsive">
 			<div class="caption" id="par1-caption">
- 	 			<h2>Get informed</h2><br>
+ 	 			<h2>Get informed</h2><br><br>
  	 			<p class="lead">
 					Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
 				</p>
