--- a/physical health.html
+++ b/physical health.html
@@ -47,9 +47,9 @@
         <img src="images/hanging-note.png" class="img-responsive">
           <div class="caption" id="physical1-caption">
             <h2>Feeling Poorly? <i class="em em-mask"></i></h2>
-            <p>Get registered with your local health service <a target="_blank" href="https://www.sheffield.ac.uk/health/newregistrations" class= "link"><b>here!</b></a> Download the Health Service app to book appointments or get advise.</p> 
-            <p>Fresher's flu doesn't need to get you down! Save the hassle of getting a doctor's appointment and check out your local pharmacy <i class="em em-pill"></i> they often have <a target="_blank" href="http://www.nhs.uk/Conditions/Flu/Pages/Treatment.aspx" class= "link"><b>everything you need</b></a> for common illnesses.</p> 
-            <p>If you're unsure of your symptoms and think it may be more serious then call <strong>NHS 111</strong> for free medical advise.</p>
+            <p><b>Get registered with your local health service <a target="_blank" href="https://www.sheffield.ac.uk/health/newregistrations" class= "link"><b>here!</b></a> Download the Health Service app to book appointments or get advise.</b></p> 
+            <p><b>Fresher's flu doesn't need to get you down! Save the hassle of getting a doctor's appointment and check out your local pharmacy <i class="em em-pill"></i> they often have <a target="_blank" href="http://www.nhs.uk/Conditions/Flu/Pages/Treatment.aspx" class= "link"><b>everything you need</b></a> for common illnesses.</b></p> 
+            <p><b>If you're unsure of your symptoms and think it may be more serious then call <strong>NHS 111</strong> for free medical advise.</b></p>
           </div>
       </div>
     </div>
@@ -65,9 +65,9 @@
         <img src="images/paperfile.png" class="img-responsive">
           <div class="caption" id="physical3-caption">
             <h2>Get Moving! <i class="em em-running"></i></h2>
-  		      <p>Can't afford a gym membership? There's plenty of cheaper options</p> 
-            <p><a target="-blank" href="https://www.bigfunrun.com/sheffield/" class= "link"><b>Fun runs</b></a> inspire you to get training or how about getting together with your mates for a <a target="_blank" href="https://www.sport-sheffield.com/fitness-and-wellbeing/s10health/fitness-classes/fitness-class-timetable" class= "link"><b>workout session</b></a>. <i class="em em-dancers"></i></p> 
-            <p>Staying fit keeps your mind and body happy!</p>
+  		      <p><b>Can't afford a gym membership? There's plenty of cheaper options</b></p> 
+            <p><b><a target="-blank" href="https://www.bigfunrun.com/sheffield/" class= "link"><b>Fun runs</b></a> inspire you to get training or how about getting together with your mates for a <a target="_blank" href="https://www.sport-sheffield.com/fitness-and-wellbeing/s10health/fitness-classes/fitness-class-timetable" class= "link"><b>workout session</b></a>. <i class="em em-dancers"></i></b></p> 
+            <p><b>Staying fit keeps your mind and body happy!</b></p>
           </div>
       </div>
     </div>
@@ -85,9 +85,9 @@
       <img src="images/paper-note.png" class="img-responsive">
         <div class="caption" id="physical2-caption">
           <h2>Eat Your Greens! <i class="em em-green_apple"></i></h2>
-          <p>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy to help you cope with assignment stress or pesky bugs that go round Uni</p>
-          <p>Check out these <a target="_blank" href="https://studentrecipes.com/" class= "link"><b>cheap and easy recipes</b></a> that can be cooked for a whole flat or just you! Fancy a challenge? Try Veganuary- good for you and the environment!</p>
-         <p>We all love a good party, but make sure you're not drinking too much as this can be damaging your body. Check out this <a target=_blank href="http://www.nhs.uk/Livewell/alcohol/Pages/alcohol-units.aspx" class= "link"><b>guide</b></a> to help you know your limits. <i class="em em-beers"></i></p>
+          <p><b>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy to help you cope with assignment stress or pesky bugs that go round Uni</b></p>
+          <p><b>Check out these <a target="_blank" href="https://studentrecipes.com/" class= "link"><b>cheap and easy recipes</b></a> that can be cooked for a whole flat or just you! Fancy a challenge? Try Veganuary- good for you and the environment!</b></p>
+         <p><b>We all love a good party, but make sure you're not drinking too much as this can be damaging your body. Check out this <a target=_blank href="http://www.nhs.uk/Livewell/alcohol/Pages/alcohol-units.aspx" class= "link"><b>guide</b></a> to help you know your limits.</b> <i class="em em-beers"></i></p>
         </div>
     </div>
   </div>
