changed middle postit

--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -65,7 +65,7 @@
       <img src="images/greenpost.png" class="img-responsive">
         <div class="caption" id="sex2-caption">
           <h2>STIs <i <i class="em em-couplekiss"></i></h2>
-          <p>Cases of sexually transmitted infections (STIs), including HIV, are increasing. If you have unprotected sex, your health is at risk. Find out what symptoms to look out for and how to stay safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/STIs.aspx" target="_blank" class= "link"> here </a> </p>
+          <p class="lead">Cases of sexually transmitted infections (STIs), including HIV, are increasing. If you have unprotected sex, your health is at risk. Find out what symptoms to look out for and how to stay safe <a href= "http://www.nhs.uk/Livewell/Sexandyoungpeople/Pages/STIs.aspx" target="_blank" class= "link"> here </a> </p>
         </div>
     </div>
     <div>
