header more readable

--- a/mental health.html
+++ b/mental health.html
@@ -36,7 +36,7 @@
       </div>
     </nav>  
 
-  	<blockquote class="top"><h1>"Mens sana in corpore sano"</h1></blockquote>
+  	<blockquote class="top "><h1 class="page-header">"Mens sana in corpore sano"</h1></blockquote>
 <div class="row">
 
 	<div id="container-fluid">
