--- a/physical health.html
+++ b/physical health.html
@@ -38,7 +38,7 @@
       </div>
     </nav>  
 
-  <h1>Looking After Your Body <i class="em em-muscle"></i></h1>
+  <h1 class="page-header">Looking After Your Body <i class="em em-muscle"></i></h1>
   
   <div class='row'>  
 
