--- a/mental health.html
+++ b/mental health.html
@@ -36,7 +36,7 @@
       </div>
     </nav>  
 
-  	<blockquote class="top"><h1>"Mens sana in corpore sano"</h1></blockquote>
+  	<blockquote class="top"><h1><i class="em em-pray"></i>"Mens sana in corpore sano"<i class="em em-persevere"></i></h1></blockquote>
 <div class="row">
 
 	<div id="container-fluid">
@@ -75,9 +75,9 @@
  	 	<div class="thumbnail text-center" id="container-fluid">	
  	 		<img src="images/tape.png" class="img-responsive">
  	 			<div class="caption" id="par3-caption">
-  					<h1><i class="em em-speech_balloon"></i>Professional support<i class="em em-confounded"></i></h1>
+  					<h1>Professional support</h1>
   					<p class="lead">
-  						Sometimes, problems  require professional assistance. There are <mark class="third">confidential</mark> services at Uni, such as the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/counselling class= "link"" class= "link"><b> Counselling Service</b></a> and the <a target="_blank" href-"http://www.sheffield.ac.uk/health" class= "link"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <mark class="third">dyslexia</mark>, so the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/disability" class= "link"><b>Disability and Dyslexia Support Service</b></a> can help.
+  						Sometimes, problems  require professional assistance. There are <mark class="third">confidential</mark> services at Uni, such as the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/counselling class= "link"" class= "link"><b> Counselling Service</b></a> and the <a target="_blank" href-"http://www.sheffield.ac.uk/health" class= "link"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <mark class="third">dyslexia</mark>, so the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/disability" class= "link"><b>Disability and Dyslexia Support Service</b></a> can help.<i class="em em-speech_balloon"></i>
   					</p>
   				</div>
   		</div>
