--- a/mental health.html
+++ b/mental health.html
@@ -36,7 +36,7 @@
       </div>
     </nav>  
 
-  	<blockquote class="top"><h1><i class="em em-pray"></i>"Mens sana in corpore sano"<i class="em em-persevere"></i></h1></blockquote>
+  	<blockquote class="top"><h1><i class="em em-pray"></i><mark class="mark-first">"Mens sana in corpore sano"</mark><i class="em em-persevere"></i></h1></blockquote>
 <div class="row">
 
 	<div id="container-fluid">
@@ -91,7 +91,7 @@
 
 
 <p id= "signup"><b>Sign up for our monthly newsletter!</b></p> 
-<input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button> 
+<input type= "text" name= "textbox" size= "30"/ placeholder="Email Address"> <button type="button">Subscribe</button> 
 
 
 </body>
