--- a/mental health.html
+++ b/mental health.html
@@ -36,7 +36,7 @@
       </div>
     </nav>  
 
-  	<blockquote class="top"><h1><i class="em em-pray"></i><mark class="mark-first">"Mens sana in corpore sano"</mark><i class="em em-persevere"></i></h1></blockquote>
+  	<blockquote class="top"><h1><mark class="mark-first"><i class="em em-pray"></i>"Mens sana in corpore sano"<i class="em em-persevere"></mark></i></h1></blockquote>
 <div class="row">
 
 	<div id="container-fluid">
