changed wording on about us

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     
     <div class= 'col-sm-7'>
     <p class="large">Who are we?</p>
-    <p class="large"> We are 3 Sheffield University students who believe that health at University is important and wanted to create a website for students to use to gain advice and tips on how to stay healthy whilst at Uni!</p>
+    <p class="large"> We are 3 Sheffield University students who believe that health at University is incredibly important. We wanted to create a website for students to use to gain advice and tips on how to stay healthy whilst at Uni!</p>
     </div>
     
     <div class='col-sm-5'>
