--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -40,7 +40,7 @@
       </div>
     </nav>
 
-  <img src= "http://www.kent.gov.uk/__data/assets/image/0003/47694/sexual-health-web-logo.png" id= imgborder>
+  <img src= "images/sexualhealthlogo.png" id= imgborder>
 
   <div class= 'row'>
     <div class= 'col-sm-4'>
