fiddled with col sizes

--- a/mental health.html
+++ b/mental health.html
@@ -39,8 +39,8 @@
   	<blockquote class="top"><h1><mark class="mark-first"><i class="em em-pray"></i>"Mens sana in corpore sano"<i class="em em-persevere"></mark></i></h1></blockquote>
 <div class="row">
 
-	<div id="container-fluid">
-	<div class='col-sm-4'>
+	<div id="container-1">
+	<div class='col-lg-4'>
 		<div class="thumbnail text-center">
  	  	 	<img src="images/notebookPaper.png" class="img-responsive">
 			<div class="caption" id="par1-caption">
@@ -56,11 +56,11 @@
  	</div>
  	</div>
 
-	<div class='col-sm-4'>
+	<div class='col-lg-4'>
  	 	<div>
  	 		<img src="images/people.jpg" class="img-responsive" id="img-border">
  	 	</div>
- 	 	<div class="thumbnail text-center " id="container-fluid">
+ 	 	<div class="thumbnail text-center " id="container-2">
  	 		<img src="images/piles.png" class="img-responsive">
  	 		<div class="caption" id="par2-caption">
 				<h2><i class="em em-couple"></i>Talk to someone<i class="em em-phone"></i></h2>
@@ -71,8 +71,8 @@
  		</div>
  	</div>
  	<div >
-	<div class='col-sm-4'>
- 	 	<div class="thumbnail text-center" id="container-fluid">	
+	<div class='col-lg-4'>
+ 	 	<div class="thumbnail text-center" id="container-3">	
  	 		<img src="images/tape.png" class="img-responsive">
  	 			<div class="caption" id="par3-caption">
   					<h1>Professional support</h1>
