--- a/physical health.html
+++ b/physical health.html
@@ -42,7 +42,7 @@
   
   <div class='row'>  
 
-    <div class='col-sm-4'>
+    <div class='col-lg-4'>
       <div class="thumbnail text-center">
         <img src="images/hanging-note.png" class="img-responsive">
           <div class="caption" id="physical1-caption">
@@ -57,7 +57,7 @@
       </div>
     </div>
 
-    <div class='col-sm-4'>
+    <div class='col-lg-4'>
       <div>
         <img src="images/brocolli.jpg" class="img-responsive" id="img-border">
       </div>
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <div class='col-sm-4'>
+    <div class='col-lg-4'>
       <div class="thumbnail text-center">
         <img src="images/paperfile.png" class="img-responsive">
           <div class="caption" id="physical3-caption">
